# order-insights

./: .gitignore  README.md  index.html  pyproject.toml
order_insights/: __init__.py  cli.py
sample_data/: inventory.csv  orders.csv
tests/: test_cli.py
